Use latest design system (#27)
* updated to boilerplate style
* added tailwind and postcss-import
* fixed gas error
* fixed prettier errors
* updated 0xsequence
* removed unused components

---------

Co-authored-by: Matt Rintoul <matt@sayyeah.com>
Co-authored-by: Matt Rintoul <matt@matt416.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
+@import "../../node_modules/boilerplate-design-system/dist/styles/src/index.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import "./components/FullScreenLoading/style.css";
 @layer utilities {
   [data-visible] {
     @apply col-start-1 row-start-1 data-[visible='false']:invisible;
