--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
-@import "boilerplate-design-system/styles/index.css";
-@source "../../node_modules/boilerplate-design-system";
+@import "@0xsequence-demos/boilerplate-design-system/styles/index.css";
+@source "../../node_modules/@0xsequence-demos/boilerplate-design-system";
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
